--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <title>Crud JavaScript</title>
+    <script src="./index.js" defer></script>
 </head>
 <body>
-    
+    <h1>Crud App</h1>
+    <div class="container">
+
+        <div class="left">
+            <form id="form"
+                placeholder=""
+            >
+                <textarea name="post" id="post" cols="30" rows="10" placeholder="What do you have in mind?"></textarea>
+                <br><br>
+                <div id="msg"></div>
+                <button type="submit">Post</button>
+            </form>
+        </div>
+        <div class="right">
+            <h3>Recent Posts</h3>
+            <div id="posts-list">
+                <div>
+                    <p>Hello world post 1</p>
+                    <span class="options">
+                      <i class="fas fa-edit"></i>
+                      <i class="fas fa-trash-alt"></i>
+                    </span>
+                  </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
