--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="./index.css">
     <title>Crud JavaScript</title>
-    <script src="./index.js" defer></script>
 </head>
 <body>
     <h1>Crud App</h1>
@@ -20,7 +19,7 @@
                 <textarea name="post" id="post" cols="30" rows="10" placeholder="What do you have in mind?"></textarea>
                 <br><br>
                 <div id="msg"></div>
-                <button type="submit">Post</button>
+                <button id="btn" type="submit">Post</button>
             </form>
         </div>
         <div class="right">
@@ -36,5 +35,6 @@
             </div>
         </div>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
