Work on create functionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <textarea name="post" id="post" cols="30" rows="10" placeholder="What do you have in mind?"></textarea>
                 <br><br>
                 <div id="msg"></div>
-                <button id="btn" type="submit">Post</button>
+                <button id="btn" type="submit" value="Submit">Post</button>
             </form>
         </div>
         <div class="right">
@@ -31,7 +31,7 @@
                       <i class="fas fa-edit"></i>
                       <i class="fas fa-trash-alt"></i>
                     </span>
-                  </div>
+                </div>
             </div>
         </div>
     </div>
