--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             >
                 <textarea name="post" id="post" cols="30" rows="10" placeholder="What do you have in mind?"></textarea>
                 <br><br>
-                <div id="msg"></div>
-                <button id="btn" type="submit" value="Submit">Post</button>
+                <!-- <div id="msg"></div> -->
+                <button id="btn" type="submit" onclick=handleFormSubmit(event)>Post</button>
             </form>
         </div>
         <div class="right">
