Can now display a list of posts

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="right">
             <h3>Recent Posts</h3>
             <div id="posts-list">
-                <div>
+                <!-- <div>
                     <p>Hello world post 1</p>
                     <span class="options">
                       <i class="fas fa-edit"></i>
                       <i class="fas fa-trash-alt"></i>
                     </span>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
