--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <div class="right">
             <h3>Recent Posts</h3>
             <div id="posts-list">
+                <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close">&times;</span>
+                      <p>Modal content goes here.</p>
+                    </div>
+                </div>
                 <!-- <div>
                     <p>Hello world post 1</p>
                     <span class="options">
