--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <h3>Recent Posts</h3>
             <div id="posts-list">
                 <div id="myModal" class="modal">
-                    <div class="modal-content">
+                    <!-- <div class="modal-content">
                       <span class="close">&times;</span>
                       <p>Modal content goes here.</p>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- <div>
                     <p>Hello world post 1</p>
